feat: added auth
